@@ -3,6 +3,8 @@ Overview of changes in lightdm 0.4.1
     * Fix linking issue with -z,defs
     * Added guest account support
     * Restart X server if it crashes during a session
+    * Don't set language environment variables, use the daemon values
+      (system default) and leave it to ~/.profile for users to set these
 
 Overview of changes in lightdm 0.4.0
 
